--- a/corsopython/esercizi3.html
+++ b/corsopython/esercizi3.html
@@ -18,8 +18,8 @@ Pitagora ed è uguale alla radice del quadrato delle componenti, sqrt(x²+y²).<
 <p>Si può generalizzare questo ragionamento a spazi a più di tre dimensioni (o addirittura a infinite dimensioni). Nel caso di un vettore a N componenti
 la lunghezza è definita come:</p>
 <p><img alt="Formula per la lunghezza di un vettore" src="img/vectorlength.gif" /></p>
-<p>Ossia la radice quadrato della somma dei quadrati delle componenti.</p>
-<p>Scrivere una funzione <code>vector_length</code> che prende come parametro un array e ne calcola la lunghezza.</p>
+<p>Ossia la radice quadrata della somma dei quadrati delle componenti.</p>
+<p>Scrivere una funzione <code>vector_length</code> che prende come parametro un vettore (rappresentato da una lista) e ne calcoli la lunghezza.</p>
 <h3>Esercizio 2</h3>
 <p>Usando le funzioni builtin <code>chr</code>, <code>ord</code> e la funzione <code>random.shuffle</code> del modulo <code>random</code> si genera una permutazione casuale dell'alfabeto:</p>
 <div class="codehilite"><pre><span></span><span class="o">&gt;&gt;&gt;</span> <span class="kn">import</span> <span class="nn">random</span>
@@ -39,7 +39,8 @@ la lunghezza è definita come:</p>
 
 <p>Un messaggio viene codificato scambiandone le lettere con quelle corrispondenti nell'alfabeto casuale.
 Ad esempio 'ciao' viene codificato come 'otmx'</p>
-<p>Scaricare il file di testo <a href="segreto.txt">segreto.txt</a> e completare il seguente programma che lo decodifica</p>
+<p>Scaricare il file di testo <a href="segreto.txt">segreto.txt</a> e completare il seguente programma che la funzione <code>decodifica</code> nel seguente programma.</p>
+<p>Il file deve essere salvato nella stessa cartella del programma affinché venga trovato!</p>
 <div class="codehilite"><pre><span></span><span class="k">def</span> <span class="nf">decodifica</span><span class="p">(</span><span class="n">messaggio</span><span class="p">,</span> <span class="n">alfabeto</span><span class="p">):</span>
     <span class="o">...</span>
 
