--- a/corsopython/esercizi1.html
+++ b/corsopython/esercizi1.html
@@ -115,7 +115,7 @@ su righe separate.</p>
 <a href="http://wordreference.com/enit">http://wordreference.com/enit</a></p>
 <p><strong>Hint</strong>: è necessario controllare tutti i numeri?</p>
 <p><strong>Hint</strong>: il minimo comune multiplo di 3 e 5 è 15...</p>
-<p><strong>Opzionale (difficile?)</strong>: Usare l'algebra e la formula opzionale dell'esercizio 11
+<p><strong>Opzionale (difficile)</strong>: Usare l'algebra e la formula opzionale dell'esercizio 11
 per risolvere questo problema.</p>
 <p>Se ogni iterazione impiegasse 1 secondo, quanto tempo impiegherebbe la soluzione iterativa con
 i numeri fino a 1000000? E quella a formula chiusa?</p>
