--- a/corsopython/esercizi2.html
+++ b/corsopython/esercizi2.html
@@ -33,12 +33,9 @@
 <p>Scrivere una funzione, di nome stampa_radice_quadrata con un parametro
 che racchiuda un blocco if/else, ma che al posto di n1,n2, ecc. usi il parametro ricevuto.</p>
 <p>Riscrivere il codice sopra usando questa funzione dove opportuno.</p>
-<p>Scrivere poi una funzione stampa_errore, sempre di un parametro, che stampi il messaggio di errore
-nel caso il parametro ricevuto sia un numero negativo.</p>
-<p>Riscrivere il codice che usa stampa_radice_quadrata aggiungendo anche stampa_errore.</p>
 <p><strong>Domanda</strong>: si vuole modificare il codice affinché calcoli la radice quarta (che si ottiene usando due volte la radice quadrata),
 inoltre si cambia il messaggio di errore a "Impossibile calcolare la radice quarta di" + str(n).</p>
-<p>Quante righe vengono modificate nel codice che usa le funzioni? Quante invece ne servirebbero nel codice originale?</p>
+<p>Quante righe vengono modificate nel codice che usa le funzioni? Quante invece ne andrebbero modificate nel codice originale?</p>
 <h3>Esercizio 2</h3>
 <p>Il computer esegue istruzioni in modo deterministico: date certe condizioni di partenza, il risultato è sempre lo stesso.</p>
 <p>Per introdurre casualità nel programma si utilizza spesso un cosiddetto random number generator (generatore di numeri casuali).</p>
@@ -71,7 +68,8 @@ un dado a 6 facce.</p>
 </pre></div>
 
 
-<p>Cosa dovrebbe succedere? Esegui il programma modificato. (Usare Ctrl+C per terminare il programma nell'interprete)</p>
+<p>Cosa dovrebbe succedere? Esegui il programma modificato. (Usare Ctrl+C per terminare il programma nell'interprete)
+Vengono stampate B e D?</p>
 <h3>Esercizio 4</h3>
 <p>Si hanno tre palline di colori diversi, e ci si domanda in quanti modi possono essere messe in fila.</p>
 <p>Si trova facilmente che la prima pallina si può scegliere in 3 modi, la seconda in 2 e l'ultima è quella esclusa, quindi ci sono 3*2*1 = 6 modi in totale.</p>
