--- a/corsopython/soluzioni3.html
+++ b/corsopython/soluzioni3.html
@@ -34,7 +34,7 @@ dia la posizione effettiva.</p>
 
 
 <p>È comune usare -1 come risultato nel caso non si trovi l'elemento (poiché non è un indice valido) ma si potrebbe usare allo stesso scopo
-anche</code>, o <code>None</code> o qualsiasi altro valore che non si confonda con un indice (oppure si potrebbe usare un'eccezione, argomento non trattato).</p>
+anche</code> <code>None</code> o qualsiasi altro valore che non si confonda con un indice (oppure si potrebbe usare un'eccezione, argomento non trattato).</p>
 <p>Una prima soluzione può essere questa:</p>
 <div class="codehilite"><pre><span class="k">def</span> <span class="nf">find_index</span><span class="p">(</span><span class="n">elem</span><span class="p">,</span> <span class="n">a</span><span class="p">):</span>
     <span class="n">i</span> <span class="o">=</span> <span class="mi">0</span>
