--- a/corsopython/slides4.html
+++ b/corsopython/slides4.html
@@ -29,7 +29,8 @@
 					  * [range](https://docs.python.org/3/library/functions.html#func-range)
 					  * [classi e oggetti](http://greenteapress.com/thinkpython/html/thinkpython016.html)
 					  * [eccezioni](https://docs.python.org/3/tutorial/errors.html#handling-exceptions)
-                      * [Guida per continuare lo studio del Python](http://greenteapress.com/thinkpython/html)
+					  * [Guida per continuare lo studio del Python](http://greenteapress.com/thinkpython/html)
+					  * Esempi di programmazione ad oggetti: [classe_conto.py](classe_conto.py), [classe_animale.py](classe_animale.py)
 				</section>
 			</div>
 		</div>
